--- a/Projects/Nav/style.css
+++ b/Projects/Nav/style.css
@@ -90,9 +90,10 @@ body {
   font-size: 18px;
   color: #fff;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 15px;
   transition: 0.5s;
   white-space: nowrap;
+  /* 不换行 */
 }
 
 .list .list-items a i {
