--- a/Projects/Hidden-search/style.css
+++ b/Projects/Hidden-search/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
   margin: 0;
 }
 
